<resources>
    <string name="app_name">ElorClass</string>
    <string name="tituloLogin">Login</string>
    <string name="tituloRegistro">Register</string>
    <string name="tituloPerfil">Profile</string>
    <string name="tituloPanel">Panel</string>
    <string name="usuarioLogin">user: </string>
    <string name="claveLogin">password: </string>
    <string name="claveRegistro">password</string>
    <string name="confirmarClave">Confirm password</string>
    <string name="botonLogin">LOGIN</string>
    <string name="botonRegistro">REGISTER</string>
    <string name="nombre">Name</string>
    <string name="usuario">User</string>
    <string name="apellido">Surname</string>
    <string name="dni">DNI</string>
    <string name="direccion">Address</string>
    <string name="telefono">Telephone</string>
    <string name="telefono2">Telephone 2</string>
    <string name="cicloFormativo">training cycle</string>
    <string name="curso">courses</string>
    <string name="dualIntensiva">Intensive dual</string>
    <string name="botonVolver">BACK</string>
    <string name="botonOlvidarContrasena">RESET PASS</string>
    <string name="cambiarContrasena">CHANGE PASS</string>
    <string name="botonVerReuniones">MEETINGS</string>
    <string name="botonMensajes">External Courses</string>
    <string name="botonVerPDF">PDF</string>
    <string name="btnVolverReunion">Back</string>
    <string name="btnEstadoReunion">Status</string>
    <string name="btnCrearReunion">Create</string>
    <string name="btnVerCursos">see courses</string>

    //Profile
    <string name="switchCambioTema">Change theme</string>
    <string name="cambiarIdioma">Idioma</string>
    <string name="claveActual">current password</string>
    <string name="botonCambioDeClave">CHANGE PASSWORD</string>
    <string name="nuevaClave">New password:</string>
    <string name="confirmarNuevaClave">Confirm new password:</string>
    <string-array name="changeLanguage">
        <item>English</item>
        <item>Spanish</item>
        <item>Euskera</item>
    </string-array>

    <string-array name="semanas">
        <item>Week 1</item>
        <item>Week 2</item>
    </string-array>

</resources>