<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="400dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_elor_horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="152dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Pefil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloPerfil"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView_ClaveActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="236dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="242dp" />

    <Switch
        android:id="@+id/switch_CambioTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchCambioTema"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <Button
        android:id="@+id/button_VolverPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonVolver"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_CambioDeClave"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <Button
        android:id="@+id/button_CambioDeClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCambioDeClave"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/button_VolverPanel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <TextView
        android:id="@+id/textView_ConfirmarNuevaClave"
        android:layout_width="329dp"
        android:layout_height="43dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_CambiarIdioma"
        app:layout_constraintTop_toBottomOf="@+id/textView6_ConfirmarNuevaClave"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/textView_ClaveActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claveActual"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_IngresarClaveActual"
        app:layout_constraintTop_toBottomOf="@+id/guideline18"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/textView_IngresarClaveActual"
        android:layout_width="337dp"
        android:layout_height="34dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_NuevaClave"
        app:layout_constraintTop_toBottomOf="@+id/textView_ClaveActual"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textView_IngresarNuevaClave"
        android:layout_width="337dp"
        android:layout_height="38dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6_ConfirmarNuevaClave"
        app:layout_constraintTop_toBottomOf="@+id/textView_NuevaClave"
        tools:layout_editor_absoluteX="27dp" />

    <TextView
        android:id="@+id/textView6_ConfirmarNuevaClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmarNuevaClave"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_ConfirmarNuevaClave"
        app:layout_constraintTop_toBottomOf="@+id/textView_IngresarNuevaClave"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textView_CambiarIdioma"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:text="@string/cambiarIdioma"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/textView_ConfirmarNuevaClave"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/textView_NuevaClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevaClave"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_IngresarNuevaClave"
        app:layout_constraintTop_toBottomOf="@+id/textView_IngresarClaveActual"
        tools:layout_editor_absoluteX="25dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="268dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView_CambiarIdioma"
        tools:layout_editor_absoluteX="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="687dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="835dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>