<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPanel">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_elor_horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="145dp" />

    <TextView
        android:id="@+id/textView_TituloPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloPanel"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSemana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <Spinner
        android:id="@+id/spinnerSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/semanas"
        app:layout_constraintTop_toBottomOf="@+id/textView_TituloPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayoutHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSemana"
        app:columnCount="5"
        app:rowCount="6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="653dp" />

    <Button
        android:id="@+id/button_VerReuniones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonVerReuniones"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/button_Pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutHorario" />

    <Button
        android:id="@+id/button_Pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonVerPDF"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/button_VerMensajes"
        app:layout_constraintStart_toEndOf="@+id/button_VerReuniones"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutHorario" />

    <Button
        android:id="@+id/button_VerMensajes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonMensajes"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Pdf"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutHorario" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="790dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
